--- a/stylesheets/switcher.css
+++ b/stylesheets/switcher.css
@@ -1,13 +1,3 @@
-html{
-  width: 100%;
-  height: 100%;
-}
-
-html, body{
-  margin: 0;
-  padding: 0;
-}
-
 #framer{
   width: 100%;
   height: 100%;
@@ -38,3 +28,7 @@ html, body{
   #switcher_nav > a.highlighted{
     background-color: #3C6;
   }
+  
+.fillscreen{
+  height: 80%;
+}
